--- a/web/index.html
+++ b/web/index.html
@@ -37,12 +37,12 @@
     var serviceWorkerVersion = null;
   </script>
   <script type="text/javascript">
-<!--    let useHtml = // ...-->
-<!--    if(useHtml) {-->
+// <!--    let useHtml = // ...-->
+// <!--    if(useHtml) {-->
       window.flutterWebRenderer = "html";
-<!--    } else {-->
-<!--      window.flutterWebRenderer = "canvaskit";-->
-<!--    }-->
+// <!--    } else {-->
+// <!--      window.flutterWebRenderer = "canvaskit";-->
+// <!--    }-->
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -104,6 +104,7 @@
       });
     });
   </script>
+
 <!--  <script>-->
 <!--    window.addEventListener('load', function(ev) {-->
 <!--      // Download main.dart.js-->
