--- a/web/index.html
+++ b/web/index.html
@@ -47,6 +47,7 @@
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
   <script src="printer.js" defer></script>
+  <script src="downloader.js" defer></script>
 </head>
 <body>
 
